--- a/client/src/pages/scan/scanner.css
+++ b/client/src/pages/scan/scanner.css
@@ -8,7 +8,6 @@
     border: 5px solid red;
   }
 
-
   #scannerNav-title{
     align-self: center;
     padding: 24px;
@@ -53,3 +52,45 @@
   }
   
   
+.scan-scannedDrawer-result{
+  display: flex;
+  flex-direction: row;
+  border: 1px solid black;
+  height: 25vh;
+}
+
+#scan-drawer-result-left{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  justify-items: center;
+  align-items: center;
+  width: 125px;
+  padding: 8px;
+}
+
+#scan-drawer-result-right{
+  display: flex;
+  padding: 8px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+#scan-drawer-result-right > h1{
+  font-size: 24px;
+}
+#scan-drawer-result-right > p{
+  font-size: 20px;
+  color: #8C8C8C;
+}
+#scan-drawer-result-right > h5{
+  font-size: 26px;
+  color: #252525;
+}
+
+#scan-item-quantity{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
