--- a/client/src/pages/cart/cart.css
+++ b/client/src/pages/cart/cart.css
@@ -1,13 +1,10 @@
 /*** S H  O P P I N G   C A R T   P A G E ***/
-
 #cart-title{
     padding: 16px;
     font-size: 30px;
     font-weight: bold;
     color: #4FA329;
 }
-
-
 .cart-item-container{
     display: grid;
     grid-template-columns: 30% 60%;
@@ -15,7 +12,6 @@
     margin-bottom: 2vh;
     
 }
-
 .cart-item-container > img {
     grid-row: 1 /3;
     padding-left: auto;
@@ -43,6 +39,10 @@
     justify-content: space-evenly;
     border: 1px solid red;
     align-items: center;
+}
+.cart-remove > img {
+    height: 20px;
+    margin-right: 8px;
 }
 
 /* Quantity / Price */
