--- a/client/src/components/navs/nav.css
+++ b/client/src/components/navs/nav.css
@@ -61,6 +61,7 @@
 .checkout-container{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 16px;
+    justify-content: space-around;
+    padding: 32px;
+
 }
