--- a/client/src/pages/scan/scanner.css
+++ b/client/src/pages/scan/scanner.css
@@ -1,62 +1,40 @@
 /*** S C A N N E R ****/
 .scan-page{
     width: 100vw;
-    height:85vh;
+    height:90vh;
     display: grid;
-    grid-template-rows: 15% 65% 20%;
     justify-items: center;
-    border: 5px solid red;
-  }
+}
 
-  #scannerNav-title{
-    align-self: center;
-    padding: 24px;
-    text-transform: uppercase;
-  }
-  #scanBtn{
-    border: 2px solid black;
-    width: 40%;
-    align-self:center;
-    
-  }
-  .scanner-component{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: gray;
-    width: 100vw;
-    padding: 20px 0 20px 0;
-    border: 1px solid black;
-  }
-  
-  #scanner-border-text{
-    margin-top: 0px;
-    z-index: 4;
-    background-color: white;
-    text-align: center;
-  }
-  .scanner-cam-container{
-    width: 60vw;
-    height: 60vw;
-    border-radius: 5%;
-    border: 1px solid orange;
-    overflow: hidden;
-  }
-  .scanner-instruction{
-    text-align: center;
-    margin: 12px;
-    border: 1px solid black;
-  }
-  #quag{
-    margin: 100px;
-  }
-  
-  
-.scan-scannedDrawer-result{
+.scanner-component{
   display: flex;
-  flex-direction: row;
-  border: 1px solid black;
-  height: 25vh;
+  flex-direction: column;
+  align-items: center;
+  background-color: gray;
+  width: 100vw;
+  padding: 20px 0 20px 0;
+}
+.scanner-cam-container{
+  width: 80vw;
+  height: 80vw;
+}
+.scanner-instruction{
+  text-align: center;
+  margin: 12px;
+  height: auto;
+  font-size: 18px;
+  color:#3B3B3B;
+}
+#scan-manual{
+  width: 80% !important;
+}
+
+
+.scan-scannedDrawer-result{
+display: flex;
+flex-direction: row;
+border: 1px solid black;
+height: 25vh;
 }
 
 #scan-drawer-result-left{
