--- a/client/src/components/buttons/button.css
+++ b/client/src/components/buttons/button.css
@@ -13,7 +13,16 @@
     font-size: 26px !important;
     height: 60px;
     width: 100% !important;
+}
 
+.button-md-hollow{
+    background-color: white !important;
+    border: 2px solid  #204310 !important;
+    color: #204310 !important;
+    font-size: 20px !important;
+    height: 45px;
+    margin: 24px;
+    width: 100% !important;
 }
 
 /*** C A R T   B U T T O N ***/
