--- a/client/src/components/navs/nav.css
+++ b/client/src/components/navs/nav.css
@@ -36,6 +36,10 @@
     font-size: 14px;
     margin: 0 8px 0 8px;
 }
+.home-store-container{
+    display: flex;
+    flex-direction: column;
+}
 
 /*** B O T T O M  N A V ***/
 .bNav-container{
