--- a/client/src/pages/instructions/instructions.css
+++ b/client/src/pages/instructions/instructions.css
@@ -1,9 +1,7 @@
 /*** I N A V  D E M O ***/
 .instruction{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: auto 0px;
+    display: grid;
+    grid-template-rows: 75vh 25vh;
     height: 100vh;
   }
   
