Enhancement 36 cart modification (#41)
Co-authored-by: ghostkid130 <urena.reynold+git@gmail.com>

--- a/client/src/components/buttons/button.css
+++ b/client/src/components/buttons/button.css
@@ -6,14 +6,13 @@
     color: #FFFFFF !important;
 }
 
-.button-lg-hollow{
-    background-color: white !important;
-    border: 2px solid  #204310 !important;
-    color: #204310 !important;
-    font-size: 26px !important;
+#button-lg-hollow{
+    background-color: white;
+    border: 2px solid  #204310;
+    color: #204310;
+    font-size: 26px;
     height: 60px;
-    width: 100% !important;
-
+    width: 80vw;
 }
 
 /*** C A R T   B U T T O N ***/
