--- a/client/src/components/drawer/drawer.css
+++ b/client/src/components/drawer/drawer.css
@@ -4,15 +4,19 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin: 16px 0;
 }
 .cred-divider > p{
     height: auto;
     padding: 8px;
+    color: #C5C5C5;
 }
 .cred-divider > hr {
-    width: 40%;
-    height: .5px;
-    background-color: grey;
+    width: 30vw;
+    height: .75px;
+    background-color: #C5C5C5;
+    border:none;
+
 }
 
 /*** T O T A L ***/
