--- a/client/src/pages/location/location.css
+++ b/client/src/pages/location/location.css
@@ -83,3 +83,17 @@
     box-shadow: 0 2px 4px 0 rgba(128, 127, 127, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.1);
 
 }
+
+
+/*** CARD ***/
+#lCards{
+    text-align:center;
+    width: 80vw;
+    margin: 16px 0;
+    font-size: .75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 2px 4px 0 rgba(128, 127, 127, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+}
